style: enhance mobile UI, fix scrollbars, and adjust image ratios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,3 +132,17 @@
     overflow-x: hidden;
   }
 }
+
+/* Utilities */
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
